--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,32 @@
 :root {
   background-color: #fcfcff;
   /* background-color: #EAEBED; */
+  /* Style the scrollbar track */
+  ::-webkit-scrollbar-track {
+    background-color: #f5f5f5;
+  }
+
+  /* Style the scrollbar thumb */
+  ::-webkit-scrollbar-thumb {
+    background-color: #888;
+    border-radius: 4px;
+  }
+
+  /* Style the scrollbar thumb on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
+  }
+
+  /* Style the scrollbar corner */
+  ::-webkit-scrollbar-corner {
+    background-color: #f5f5f5;
+  }
+
+  /* Set the scrollbar width and height */
+  ::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+  }
 }
 
 .speech-bubble {
@@ -14,7 +40,7 @@
 }
 
 .speech-bubble.right {
-  background-color: #C1EDCC;
+  background-color: #c1edcc;
 }
 
 .speech-bubble.left {
