--- a/src/index.css
+++ b/src/index.css
@@ -1,32 +1,24 @@
 :root {
   background-color: #fcfcff;
-  /* background-color: #EAEBED; */
-  /* Style the scrollbar track */
-  ::-webkit-scrollbar-track {
-    background-color: #f5f5f5;
-  }
+}
 
-  /* Style the scrollbar thumb */
-  ::-webkit-scrollbar-thumb {
-    background-color: #888;
-    border-radius: 4px;
-  }
-
-  /* Style the scrollbar thumb on hover */
-  ::-webkit-scrollbar-thumb:hover {
-    background-color: #555;
-  }
-
-  /* Style the scrollbar corner */
-  ::-webkit-scrollbar-corner {
-    background-color: #f5f5f5;
-  }
-
-  /* Set the scrollbar width and height */
-  ::-webkit-scrollbar {
-    width: 8px;
-    height: 8px;
-  }
+/* Scrollbar Style */
+::-webkit-scrollbar-track {
+  background-color: #f5f5f5;
+}
+::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 4px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+}
+::-webkit-scrollbar-corner {
+  background-color: #f5f5f5;
+}
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
 }
 
 .speech-bubble {
